<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rileydixon.assignment1.ViewingCounterActivity">

    <TextView
        android:id="@+id/counterText"
        android:layout_width="0dp"
        android:layout_height="152dp"
        android:layout_marginRight="125dp"
        android:layout_marginTop="100dp"
        android:elevation="1dp"
        android:password="false"
        android:text="Counter"
        android:textAlignment="center"
        android:textColorLink="@color/colorPrimary"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="125dp" />

    <Button
        android:id="@+id/incrementButton"
        android:layout_width="88dp"
        android:layout_height="60dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="+"
        app:layout_constraintLeft_toRightOf="@+id/counterText"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="140dp" />

    <Button
        android:id="@+id/decrementButton"
        android:layout_width="88dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="-"
        app:layout_constraintRight_toLeftOf="@+id/counterText"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="140dp" />

    <TextView
        android:id="@+id/commentText"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/counterText"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="0dp"
        android:text="@string/button_reset_counter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/button_edit_counter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/deleteButton"
        app:layout_constraintRight_toLeftOf="@+id/resetButton" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:text="@string/button_delete_counter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
